syntax = "proto3";

option java_outer_classname = "CheckpointProtos";
option java_multiple_files = true;
option java_package = "com.alibaba.flink.ml.proto";

message CheckpointRequest {
    int64 checkpointId = 1;
}

message CheckpointResponse {
    int32 code = 1;
    string message = 2;
}
