syntax = "proto3";

option java_outer_classname = "CheckpointServiceProtos";
option java_multiple_files = true;
option java_package = "com.alibaba.flink.ml.proto";
import "checkpoint.proto";

service CheckpointService {

    rpc SnapshotState(CheckpointRequest) returns(CheckpointResponse);

}
